@@ -1,3 +1,8 @@
+2007-11-28  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/tclIO.c:	Simplify test and improve accuracy of error
+	message in latest changes.
+
 2007-11-28  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* generic/tclIO.c: -eofchar must support no eofchar.
